added new use case to append items to inventory, only description and type are asked

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -55,6 +55,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/items.js"></script>
         <script src="scripts/services/items.js"></script>
+        <script src="scripts/controllers/newitem.js"></script>
         <!-- endbuild -->
 </body>
 </html>
