--- a/client/app/index.html
+++ b/client/app/index.html
@@ -16,10 +16,11 @@
     <!-- endbuild -->
   </head>
   <body ng-app="atomtoryApp">
+
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <div ng-view=""></div>
+    <div layout="column" layout-fill ng-view="" flex></div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
